# SearchEngine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchService.cpp  SearchService.h  answers.json  config.json  main.cpp  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchService.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchService.cpp  answers.json  config.json  main.cpp  requests.json
src/files_for_test/: file001.txt
tests/: CMakeLists.txt  test_inverted_index.cpp  testsOfCommonClasses.cpp
